# github-action-tricks

./: Dockerfile.dev  README.md  blog-feed.txt  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/actions-scripts/: get-labels.mjs  set-label.js  set-label.mjs
.github/actions/slack-alert/: action.yml
.github/workflows/: action-script.yml  action-scripts.yml  annotation-reporter.yml  blog-feed-to-yaml.yml  build-and-deploy.yml  cancel-ongoing-action.yml  celebrate-changed-files.yml  celebrate-push.yml  django.yml  do-something-with-python.yml  docker-dev.yml  dont-bother-if-auto-merge-enabled.yml  dont-create-branches-that-already-exist.yml  github-script.yml  lint.yml  maybe-fail.yml  post-build-and-deploy.yml  post-comment-on-issue.yml  post-comment-on-pr.yml  pr-pics.yml  preview-deploy.yml  run-after-cancel-ongoing.yml  scrape-and-index.yml  send-after-build.yml  test-some-nextjs-app.yml  upload-build.yml
docs/: bar.mdx  foo.md
docs/sub directory/: sample file.md
some-nextjs-app/: package-lock.json  package.json
some-nextjs-app/src/pages/: [name].tsx  _app.tsx
src/: index.js
src/workflows/: get-preview-app-info.sh
